<resources>
    <string name="app_name">Food or Medicine Now?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_config">Set Medicine Details</string>

    <string name="config_hours_after_food">Hours before eating</string>
    <string name="config_title">You can take your medicine how many hours…</string>
    <string name="config_placeholder_after">After Eating</string>
    <string name="config_placeholder_before">Before Eating</string>
    <string name="config_save_button">Update</string>
    <string name="title_activity_add">Add something you did</string>
    <string name="add_type">What did you have?</string>
    <string name="add_type_food">Food</string>
    <string name="add_type_medicine">Medicine</string>
    <string name="add_time_label">Time Taken or Finished</string>
    <string name="add_button_text">Add</string>
</resources>
